Fix broken styles

--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -1,3 +1,8 @@
+p > code {
+  background-color: #FAFAFA;
+  border: 1px solid #EAEAEA;
+}
+
 div[class*="language-"],
 code[class*='language-'],
 pre[class*='language-'] {
